# trlc-vscode-extension

./: .gitignore  .vscodeignore  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  README_development.md  README_extension.md  esbuild.js  package-lock.json  package.json  package2.json  plugInREADME.md  pylint3.cfg  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  trlc-grammar.json  trlc-language-configuration.json  tsconfig.json
.github/workflows/: build.yml  ci.yml
client/src/: extension.ts
client2/: sanity_checks.py
client2/src/: extension2.ts
lsp4ij-template/: README.md  clientSettings.json  installer.json  template.json
server/: __main__.py  bmw_specific_checks.py  server.py  trlc_utils.py
trlc_lsp/: README.md  __init__.py  __main__.py  server.py  trlc_utils.py
utils/: install-python.bat
